# conrad-eis-pipeline

./: .gitignore  README.md  SWEEP_FORMAT.md  capture.py  cli.py  pyproject.toml
eis/: __init__.py  features.py  io.py  model.py  noise.py  plots.py  qc.py  report.py  synth.py
firmware/: README.md  platformio.ini
firmware/src/: ad5933.cpp  ad5933.h  ad5933_math.h  main.cpp
firmware/test/: Makefile  test_math.cpp
tests/: test_firmware_integration.py  test_pipeline.py
